--- a/Lab1-2/welcome.html
+++ b/Lab1-2/welcome.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,7 +6,8 @@
 	<title></title>
 </head>
 <body>
-	<form class="indeling" action="welcome.html">
+	<form class="indeling" action="welcome.php" method="get">
+		<h1>De ingevulde gegevens zijn:</h1>
 		Name:<input type="text" name="Naam"><br>
 		Email:<input type="text" name="Email">
 		<input type="submit" name="verzenden" id="klaar">
