--- a/Mad libs/madlibs.html
+++ b/Mad libs/madlibs.html
@@ -9,7 +9,7 @@
 
 	<div id="een">
 		<h1 id="titel">Onkunde</h1>
-		<form action="madlibs.php">
+		<form action="madlibs.php" method="POST">
 			<p id="vraag1">Wat zou je graag willen kunnen?<input class="tekstvak" type="text" name="vraag1"></p>
 			<p id="vraag2">Met welk persoon kan je goed opschieten?<input class="tekstvak" type="text" name="vraag2"></p>
 			<p id="vraag3">Wat is je favoriete getal?<input class="tekstvak" type="text" name="vraag3"></p>
@@ -21,11 +21,12 @@
 		</form>
 
 		<div id= twee>
-			<p id="tekst">Er heerst paniek... &nbsp &nbsp &nbsp &nbsp &nbsp Onkunde</p>
+			<a id="link1" href="madlibs.html">Onkunde</a>
+			<a id="link2" href="madlibs2.html">Er heerst paniek...</a>
 		</div>
 
 		<div id="drie">
-			<p id=footertekst>Deze website is gemaakt door Spinoza</p>
+			<p id=footertekst>Deze website is gemaakt door Swen Sperling 2020</p>
 		</div>
 	</div>
 
